--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,7 @@ button {
 	position: absolute;
 	bottom: -1px;
 }
+
 .page-portfolio::after {
 	content: "";
 	width: 66px;
@@ -115,6 +116,7 @@ button {
 	position: absolute;
 	bottom: -1px;
 }
+
 /* navigation */
 .site-nav .link {
 	display: block;
@@ -131,6 +133,9 @@ button {
 	color: var(--body-text);
 }
 .site-nav .link:focus {
+	color: var(--focus-state);
+}
+.site-nav .link.active {
 	color: var(--focus-state);
 }
 .link.contact {
@@ -261,8 +266,9 @@ button {
 	border: 1px solid rgba(0, 0, 0, 0.1);
 	border-radius: 50%;
 
-	transition: background-color, fill, border, 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+	fill 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+	border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-icon:is(:hover, :focus) {
@@ -512,8 +518,12 @@ button {
 	border: 1px solid #E7E9FC;
 	border-radius: 4px;
 
-	transition: background, color, border, box-shadow, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+	color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+	border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+	box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .filter-menu [type="button"]:hover {
 	background-color: #404BBF;
 color: var(--background-primary);
@@ -580,7 +590,13 @@ border: 1px solid #404BBF;
 /* card overlay */
 .card-img {
 	position: relative;
-		overflow: hidden;
+	overflow: hidden;
+}
+.overlay-text {
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.02em;
+	color: var(--background-secondary);
 }
 
 .overlay-hover {
@@ -593,19 +609,13 @@ border: 1px solid #404BBF;
    padding-left: 32px;
    padding-right: 32px;
    background-color: #4D5AE5;
-	opacity: 0;
+	opacity: 1;
 
 	transform: translateY(100%);
 	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.overlay-text {
-	font-size: 16px;
-	line-height: 1.5;
-	letter-spacing: 0.02em;
-	color: #F4F4FD;
-}
 
-.item-portfolio:is(:hover, :focus) .overlay-hover {
+.card-portfolio:is(:hover, :focus) .overlay-hover {
 	opacity: 1;
 	transform: translateY(0);
 }
